--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -17,9 +17,15 @@
             </div>
         </div>
         <button class="btn btn-round form-control">
-        <a href="{% url 'auth:register' %}" class="">
-            зарегистрироваться
-        </a>
+            <a href="{% url 'auth:register' %}" class="">
+                Зарегистрироваться
+                </a>
+        </button>
+        <button class="btn btn-round form-control">
+            <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">
+             Вход через ВКонтакте
+
+            </a>
     </button>
     </div>
 {% endblock %}
