--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -5,6 +5,7 @@
         <li><a href="{% url 'products:index' %}">продукты</a></li>
         <li><a href="{% url 'contacts' %}">контакты</a></li>
         {% if user.is_authenticated %}
+        <!-- Example split danger button -->
         <li>
             <a href="{% url 'auth:edit' %}">
                 {{ user.first_name|default:'Пользователь' }}
@@ -18,6 +19,17 @@
                 </span>
             </a>
         </li>
+        <li>
+                <a class="menu dropdown-toggle" style='margin-top: -7px;' type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown button
+                </a>
+                <ul class="menu dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            
+        </li> 
         {% if user.is_superuser %}
         <li>
             <a href="{% url 'admin_staff:users' %}">админка</a>
@@ -25,6 +37,8 @@
         {% endif %}
 
         {% endif %}
+        <li>
+        </li>
         <li>
             {% if user.is_authenticated %}
               <a href="{% url 'auth:logout' %}">выйти</a>
