--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -17,7 +17,11 @@
     <span class="nav_name">Категории</span>
 </a>
 
-<a href="#" class="nav_link">
+<a href="{% url 'ordersapp:orders_list' %}" class="nav_link">
+    <i class='bx bx-bookmark nav_icon'></i>
+    <span class="nav_name">Заказы</span>
+</a>
+{% comment %} <a href="#" class="nav_link">
     <i class='bx bx-bookmark nav_icon'></i>
     <span class="nav_name">Bookmark</span>
 </a>
@@ -30,4 +34,4 @@
 <a href="#" class="nav_link">
     <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
     <span class="nav_name">Stats</span>
-</a>
+</a> {% endcomment %}
